test/LitTests/Parser/Class/UnterminatedClassDefMethodList.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// CHECK: .loci:8:1: error: Expected 'RCURLYBRACKET'; got 'END'.
class TestClass() {

// CHECK: 1 error generated.
